<resources>
    <string name="app_name">Rules Support</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_cadastro_player">CadastroPlayer</string>
    <string name="title_activity_cadastro_monstro">CadastroMonstro</string>
    <string name="informacoes_gerais">Informações Gerais</string>
    <string name="raca">Raça</string>
    <string name="subtipos">Subtipo(s)</string>
    <string name="tipo">Tipo</string>
    <string name="tendencia">Tendência</string>
    <string name="peso">Peso</string>
    <string name="tamanho">Tamanho</string>
    <string name="altura">Altura</string>
    <string name="descricao">Descrição e Aparência</string>
    <string name="title_activity_main">MainActivity</string>
</resources>
